# sanbox_engine

./: Cargo.toml  build.sh  run.sh
src/: main.rs
src/rendering/: buffer_bundle.rs  loaded_image.rs  mod.rs  primitives.rs  renderer.rs  sprite.rs  winit_state_user_input.rs
src/rendering/shaders/: .clang-format  frag_default.frag  vert_default.vert
src/shaders/: frag_default.frag
