[package]
name = "sanbox_engine"
version = "0.1.0"
authors = ["jjspira"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["metal"]
metal = ["gfx-backend-metal"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
winit = "0.19.2"
log = "0.4.8"
gfx-hal = "0.3.0"
arrayvec = "0.4.11"
simple_logger = "1.3.0"

[dependencies.gfx-backend-vulkan]
version = "0.3"
optional = true
features = ["winit"]

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.3"
optional = true
features = ["winit"]

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.3"
optional = true
features = ["winit"]


